[gd_scene load_steps=5 format=3 uid="uid://cd8s1ifwa0vhh"]

[ext_resource type="Script" path="res://battle/win/mini_dice_ui.gd" id="1_1wtlv"]
[ext_resource type="Texture2D" uid="uid://cr5jelochp1h8" path="res://art/icon/4/Skillicon4_09.png" id="1_331pi"]
[ext_resource type="AudioStream" uid="uid://dqrffhs5chm13" path="res://art/sfx/WAV/MI_SFX 01.wav" id="3_b3fod"]
[ext_resource type="StyleBox" uid="uid://crq7xrr5jqflm" path="res://battle/win/outline.tres" id="4_akixu"]

[node name="MiniDiceUI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_1wtlv")

[node name="Panels" type="Node2D" parent="."]

[node name="s1" type="Panel" parent="Panels"]
offset_right = 40.0
offset_bottom = 40.0

[node name="s2" type="Panel" parent="Panels"]
offset_left = 41.0
offset_right = 81.0
offset_bottom = 40.0

[node name="s3" type="Panel" parent="Panels"]
offset_left = 82.0
offset_right = 122.0
offset_bottom = 40.0

[node name="s4" type="Panel" parent="Panels"]
offset_left = 82.0
offset_top = 41.0
offset_right = 122.0
offset_bottom = 81.0

[node name="s5" type="Panel" parent="Panels"]
offset_left = 41.0
offset_top = 41.0
offset_right = 81.0
offset_bottom = 81.0

[node name="s6" type="Panel" parent="Panels"]
offset_top = 41.0
offset_right = 40.0
offset_bottom = 81.0

[node name="Symbols" type="Node2D" parent="."]

[node name="s1" type="Sprite2D" parent="Symbols"]
position = Vector2(20, 20)
texture = ExtResource("1_331pi")

[node name="s2" type="Sprite2D" parent="Symbols"]
position = Vector2(61, 20)
texture = ExtResource("1_331pi")

[node name="s3" type="Sprite2D" parent="Symbols"]
position = Vector2(102, 20)
texture = ExtResource("1_331pi")

[node name="s4" type="Sprite2D" parent="Symbols"]
position = Vector2(102, 61)
texture = ExtResource("1_331pi")

[node name="s5" type="Sprite2D" parent="Symbols"]
position = Vector2(61, 61)
texture = ExtResource("1_331pi")

[node name="s6" type="Sprite2D" parent="Symbols"]
position = Vector2(20, 61)
texture = ExtResource("1_331pi")

[node name="SelectSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_b3fod")

[node name="Outlines" type="Node2D" parent="."]

[node name="s1" type="Panel" parent="Outlines"]
visible = false
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_styles/panel = ExtResource("4_akixu")

[node name="s2" type="Panel" parent="Outlines"]
visible = false
offset_left = 41.0
offset_right = 81.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_styles/panel = ExtResource("4_akixu")

[node name="s3" type="Panel" parent="Outlines"]
visible = false
offset_left = 82.0
offset_right = 122.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_styles/panel = ExtResource("4_akixu")

[node name="s4" type="Panel" parent="Outlines"]
visible = false
offset_left = 82.0
offset_top = 41.0
offset_right = 122.0
offset_bottom = 81.0
mouse_filter = 2
theme_override_styles/panel = ExtResource("4_akixu")

[node name="s5" type="Panel" parent="Outlines"]
visible = false
offset_left = 41.0
offset_top = 41.0
offset_right = 81.0
offset_bottom = 81.0
mouse_filter = 2
theme_override_styles/panel = ExtResource("4_akixu")

[node name="s6" type="Panel" parent="Outlines"]
visible = false
offset_top = 41.0
offset_right = 40.0
offset_bottom = 81.0
mouse_filter = 2
theme_override_styles/panel = ExtResource("4_akixu")

[connection signal="gui_input" from="Panels/s1" to="." method="_on_s_1_gui_input"]
[connection signal="gui_input" from="Panels/s2" to="." method="_on_s_2_gui_input"]
[connection signal="gui_input" from="Panels/s3" to="." method="_on_s_3_gui_input"]
[connection signal="gui_input" from="Panels/s4" to="." method="_on_s_4_gui_input"]
[connection signal="gui_input" from="Panels/s5" to="." method="_on_s_5_gui_input"]
[connection signal="gui_input" from="Panels/s6" to="." method="_on_s_6_gui_input"]
[connection signal="gui_input" from="Outlines/s1" to="." method="_on_s_1_gui_input"]
[connection signal="gui_input" from="Outlines/s2" to="." method="_on_s_1_gui_input"]
[connection signal="gui_input" from="Outlines/s3" to="." method="_on_s_1_gui_input"]
[connection signal="gui_input" from="Outlines/s4" to="." method="_on_s_1_gui_input"]
[connection signal="gui_input" from="Outlines/s5" to="." method="_on_s_1_gui_input"]
[connection signal="gui_input" from="Outlines/s6" to="." method="_on_s_1_gui_input"]
